frontend: Added Material UI and navigation menu

--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -7,20 +7,28 @@
     <title>Podcast Flows</title>
 
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <!-- Fonts -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <!-- CSS Reset -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
     />
-    <!-- Milligram CSS -->
+
+    <!-- Material Typography -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"
+      href="https://unpkg.com/@material/typography@13.0.0/dist/mdc.typography.css"
     />
+
+    <!-- SMUI -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/svelte-material-ui/bare.css"
+    />
+
     <link rel="stylesheet" href="/build/bundle.css" />
 
     <script defer src="/build/bundle.js"></script>
